--- a/.github/workflows/app_to_fargate.yaml
+++ b/.github/workflows/app_to_fargate.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: "us-east-1" # Change to your AWS region
+      AWS_REGION: "ap-south-1" # Change to your AWS region
       ECR_REPOSITORY_URL: ${{ secrets.ECR_REPOSITORY_URL }}
       ECS_CLUSTER_NAME: ${{ secrets.ECS_CLUSTER_NAME }}
       ECS_SERVICE_NAME: ${{ secrets.ECS_SERVICE_NAME }}
